<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:ignore="RtlHardcoded">

    <ProgressBar
        android:id="@+id/pbDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:elevation="3dp" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abDetail"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/cToolBar"
            android:textSize="34sp"
            app:title="Title"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <ImageView
                android:id="@+id/imgDetail"
                android:src="@drawable/ic_loading"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:src="@drawable/shadow"
                tools:ignore="ContentDescription"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbDetail"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/abc_ic_ab_back_material"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nscDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="none"
        app:behavior_overlapTop="80dp">
            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                android:id="@+id/cvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvDateRelease"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_release"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@android:color/primary_text_dark"
                        android:text="@string/score"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDateRelease" />

                    <TextView
                        android:id="@+id/tvLblOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/overview"
                        android:textAllCaps="true"
                        android:textColor="@android:color/primary_text_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/tvScore"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/tvOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/overview_detail"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tvLblOverview"
                        tools:layout_editor_absoluteX="0dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_to_favorite"
        android:visibility="visible"
        app:backgroundTint="@color/purple_200"
        app:borderWidth="3dp"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>