<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="overview_detail">Overview Detail</string>
    <string name="img_splash_screen">IMG Splash Screen</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="rating">Rating</string>
    <string name="date_release">Date Release: %s</string>
    <string name="score">Score : %s</string>
    <string name="btnFavorite">Button Favorite</string>
    <string name="message_undo">Undo delete the item?</string>
    <string name="message_ok">OK</string>
    <string name="error">There is an error</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="my_favorite">My Favorite</string>
</resources>